# linux-gamepad

./: CMakeLists.txt
include/gamepad/: callback_list.h  gamepad.h  gamepad_ids.h  gamepad_manager.h  gamepad_mapping.h  joystick.h  joystick_manager.h
src/: gamepad.cpp  gamepad_manager.cpp  gamepad_mapping.cpp  linux_joystick.cpp  linux_joystick.h  linux_joystick_manager.cpp  linux_joystick_manager.h  linux_joystick_manager_inotify.cpp  linux_joystick_manager_inotify.h
